--- a/native/lib/glew/CMakeLists.txt
+++ b/native/lib/glew/CMakeLists.txt
@@ -1,11 +1,6 @@
 cmake_minimum_required(VERSION 3.1)
 project(glew)
 
-# configuring msvc to include the runtime
-if (WIN32)
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
-endif (WIN32)
 
 set(Glew-Headers
 	include/GL/glew.h
@@ -20,7 +15,7 @@ set(Glew-Sources
 
 add_library(Glew-OBJ OBJECT ${Glew-Headers} ${Glew-Sources})
 target_include_directories(Glew-OBJ PUBLIC "include")
-target_compile_definitions(Glew-OBJ PUBLIC GLEW_STATIC) # to get exports
+target_compile_definitions(Glew-OBJ PRIVATE GLEW_BUILD) # to get exports
 set_property(TARGET Glew-OBJ PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 if (WIN32)
