--- a/native/lib/utils/CMakeLists.txt
+++ b/native/lib/utils/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.1)
 project(utils CXX)
 
-
-set(TARGET              utils)
 set(PUBLIC_HDR_DIR      include)
 
 
@@ -19,9 +17,9 @@ set(Utils-Sources
 include_directories(${PUBLIC_HDR_DIR})
 
 # add object target
-add_library(Utils-OBJ OBJECT ${Utils-Headers} ${Utils-Sources})
-target_include_directories(Utils-OBJ PUBLIC include)
-set_property(TARGET Utils-OBJ PROPERTY POSITION_INDEPENDENT_CODE ON)
-target_compile_definitions(Utils-OBJ PRIVATE BUILDING_DLL)
+add_library(lib-utils-obj OBJECT ${Utils-Headers} ${Utils-Sources})
+target_include_directories(lib-utils-obj PUBLIC include)
+set_property(TARGET lib-utils-obj PROPERTY POSITION_INDEPENDENT_CODE ON)
+target_compile_definitions(lib-utils-obj PRIVATE BUILDING_DLL)
 
 
