working on build

--- a/native/DriftFX/CMakeLists.txt
+++ b/native/DriftFX/CMakeLists.txt
@@ -95,12 +95,7 @@ target_compile_definitions(driftfx PRIVATE BUILDING_DLL)
 
 target_link_libraries(driftfx PUBLIC lib-utils-obj)
 target_link_libraries(driftfx PUBLIC lib-glew-obj)
+target_link_libraries(driftfx PRIVATE ${LinkLibraries})
+target_include_directories(driftfx PRIVATE ${IncludeDirectories})
 
-#target_compile_definitions(DriftFX-OBJ PUBLIC GLEW_STATIC)
-
-if (WIN32)
-#target_link_libraries(DriftFX-OBJ PUBLIC opengl32 gdi32)
-target_include_directories(driftfx PRIVATE ${DIRECTX_INCLUDE_DIRS})
-target_link_libraries(driftfx PUBLIC ${DIRECTX9_LIBRARIES})
-endif (WIN32)
 
