--- a/native/lib/glew/CMakeLists.txt
+++ b/native/lib/glew/CMakeLists.txt
@@ -17,6 +17,7 @@ add_library(lib-glew-obj OBJECT ${Glew-Headers} ${Glew-Sources})
 target_include_directories(lib-glew-obj PUBLIC "include")
 target_compile_definitions(lib-glew-obj PUBLIC GLEW_STATIC)
 set_property(TARGET lib-glew-obj PROPERTY POSITION_INDEPENDENT_CODE ON)
+target_include_directories(lib-glew-obj PRIVATE ${IncludeDirectories})
 
 if (WIN32)
 	target_link_libraries(lib-glew-obj PUBLIC opengl32 gdi32)
