--- a/.travis.yml
+++ b/.travis.yml
@@ -44,14 +44,15 @@ jobs:
         homebrew:
           packages:
             - awscli
-      install:
-        - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
-        - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
-        - travis_retry wget --no-check-certificate https://cmake.org/files/v3.13/cmake-3.13.0-Darwin-x86_64.tar.gz
-        - tar -xvf cmake-3.13.0-Darwin-x86_64.tar.gz > /dev/null 2> /dev/null
-        - mv cmake-3.13.0-Darwin-x86_64 cmake-install
-        - PATH=${DEPS_DIR}/cmake-install:${DEPS_DIR}/cmake-install/CMake.app/Contents/bin:$PATH
-        - cd ${TRAVIS_BUILD_DIR}
+            - cmake@3.13.0
+              #      install:
+              #        - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
+              #        - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
+              #        - travis_retry wget --no-check-certificate -nv https://cmake.org/files/v3.13/cmake-3.13.0-Darwin-x86_64.tar.gz
+              #        - tar -xvf cmake-3.13.0-Darwin-x86_64.tar.gz > /dev/null 2> /dev/null
+              #        - mv cmake-3.13.0-Darwin-x86_64 cmake-install
+              #        - PATH=${DEPS_DIR}/cmake-install:${DEPS_DIR}/cmake-install/CMake.app/Contents/bin:$PATH
+              #        - cd ${TRAVIS_BUILD_DIR}
       script: 
         - echo "Building MacOS GCC Natives"
         - mkdir build
@@ -59,7 +60,6 @@ jobs:
         - cmake -G "Unix Makefiles" ../native || cat CMakeFiles/CMakeOutput.log
         - make
       after_success:
-        - ls -al DriftFX
         - aws s3 cp DriftFX/libdriftfx.dylib s3://efxclipse-drift/$TRAVIS_BUILD_NUMBER/natives/macos/libdriftfx.dylib
         - aws s3 cp samples/libsamples.dylib s3://efxclipse-drift/$TRAVIS_BUILD_NUMBER/natives/macos/libsamples.dylib
     - name: "Linux GCC Natives"
@@ -71,14 +71,15 @@ jobs:
         - sudo apt-get install mesa-common-dev
         - sudo apt-get install cmake
         - pip install --user awscli
-      install:
-        - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
-        - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
-        - travis_retry wget --no-check-certificate https://cmake.org/files/v3.13/cmake-3.13.0-Linux-x86_64.tar.gz
-        - tar -xvf cmake-3.13.0-Linux-x86_64.tar.gz > /dev/null
-        - mv cmake-3.13.0-Linux-x86_64 cmake-install
-        - PATH=${DEPS_DIR}/cmake-install:${DEPS_DIR}/cmake-install/bin:$PATH
-        - cd ${TRAVIS_BUILD_DIR}
+        - pip install --user cmake == 3.13.0
+          #      install:
+          #        - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
+          #        - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
+          #        - travis_retry wget --no-check-certificate -nv Uttps://cmake.org/files/v3.13/cmake-3.13.0-Linux-x86_64.tar.gz
+          #        - tar -xvf cmake-3.13.0-Linux-x86_64.tar.gz > /dev/null
+          #        - mv cmake-3.13.0-Linux-x86_64 cmake-install
+          #        - PATH=${DEPS_DIR}/cmake-install:${DEPS_DIR}/cmake-install/bin:$PATH
+          #        - cd ${TRAVIS_BUILD_DIR}
       script:
         - echo "Building Linux GCC Natives"
         - mkdir build
@@ -86,7 +87,6 @@ jobs:
         - cmake -G "Unix Makefiles" ../native || cat CMakeFiles/CMakeOutput.log
         - make
       after_success:
-        - ls -al DriftFX
         - aws s3 cp DriftFX/libdriftfx.so s3://efxclipse-drift/$TRAVIS_BUILD_NUMBER/natives/linux/libdriftfx.so
         - aws s3 cp samples/libsamples.so s3://efxclipse-drift/$TRAVIS_BUILD_NUMBER/natives/linux/libsamples.so
     - stage: build-java
