--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,9 @@ jobs:
         homebrew:
           packages:
             - awscli
-            - cmake@3.13.0
-              #      install:
+            - cmake
+      install:
+        - cmake -version
               #        - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
               #        - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
               #        - travis_retry wget --no-check-certificate -nv https://cmake.org/files/v3.13/cmake-3.13.0-Darwin-x86_64.tar.gz
