--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,8 @@ jobs:
             - cmake
       install:
         - cmake -version
+        - brew desc cmake
+        - brew info cmake
               #        - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
               #        - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
               #        - travis_retry wget --no-check-certificate -nv https://cmake.org/files/v3.13/cmake-3.13.0-Darwin-x86_64.tar.gz
