--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ jobs:
           #        - mv cmake-3.13.0-win64-x64 cmake-install
           #        - PATH=${DEPS_DIR}/cmake-install:${DEPS_DIR}/cmake-install/bin:$PATH
           #        - cd ${TRAVIS_BUILD_DIR}
-        - choco install cmake.portable --version 3.13.0
-        - choco install jdk8.portable
+        - choco install cmake --version 3.13.0
+        - choco install jdk8
         - choco install visualstudio2017buildtools
         - choco install visualstudio2017-workload-vctools
         - choco install visualstudio2017-workload-nativedesktop
@@ -48,7 +48,7 @@ jobs:
         - cmake -version
         - brew desc cmake
         - brew info cmake
-        - tools/install_cmake_macos.sh
+        - sh tools/install_cmake_macos.sh
               #        - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
               #        - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
               #        - travis_retry wget --no-check-certificate -nv https://cmake.org/files/v3.13/cmake-3.13.0-Darwin-x86_64.tar.gz
