--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -13,8 +13,9 @@ stages:
             CMAKE_BUILD_TYPE: 'Release'
       steps: 
       - bash: echo "This is Win32 ${CMAKE_BUILD_TYPE}"
-      - bash: cmake
-      - bash: msbuild /property:Configuration=${CMAKE_BUILD_TYPE}
+      - bash: mkdir build && cd build
+      - bash: cmake -G "Visual Studio 15 2017 Win64" ../native
+      - bash: msbuild /property:Configuration=${CMAKE_BUILD_TYPE} releng.sln
     - job: build_macos_natives
       pool:
         vmImage: 'macOS-10.14'
@@ -26,7 +27,8 @@ stages:
             CMAKE_BUILD_TYPE: 'Release'
       steps:
       - bash: echo "This is MacOS ${CMAKE_BUILD_TYPE}"
-      - bash: cmake -D ${CMAKE_BUILD_TYPE}
+      - bash: mkdir build && cd build
+      - bash: cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -G "Unix Makefiles" ../native
       - bash: make
     - job: build_linux_natives
       pool:
@@ -39,7 +41,8 @@ stages:
             CMAKE_BUILD_TYPE: 'Release'
       steps: 
       - bash: echo "This is Linux ${CMAKE_BUILD_TYPE}"
-      - bash: cmake -D ${CMAKE_BUILD_TYPE}
+      - bash: mkdir build && cd build
+      - bash: cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -G "Unix Makefiles" ../native
       - bash: make
   - stage: build_java
     jobs:
