testing azure pipelines

--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -12,9 +12,7 @@ stages:
           Release:
             CMAKE_BUILD_TYPE: 'Release'
       steps: 
-      - bash:
-        workingDirectory: '.'
-        scriptPath: '.azure-pipeline/build-win32.sh'
+      - bash: '.azure-pipeline/build-win32.sh'
     - job: build_macos_natives
       pool:
         vmImage: 'macOS-10.14'
