--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -1,10 +1,10 @@
 
 stages:
   - stage: build_natives
-    name: Natives
+    displayName: Natives
     jobs:
     - job: build_win32_natives
-      name: Win32
+      displayName: Win32
       pool:
         vmImage: 'windows-2019'
         demands:
@@ -22,7 +22,7 @@ stages:
       - bash: choco install visualstudio2017-workload-nativedesktop
       - bash: '.azure-pipelines/build-win32.sh'
     - job: build_macos_natives
-      name: MacOS
+      displayName: MacOS
       pool:
         vmImage: 'macOS-10.14'
       strategy:
@@ -34,7 +34,7 @@ stages:
       steps:
       - bash: .azure-pipelines/build-unix.sh
     - job: build_linux_natives
-      name: Linux
+      displayName: Linux
       pool:
         vmImage: 'ubuntu-16.04'
       strategy:
