Update test.yml for Azure Pipelines

--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -56,7 +56,7 @@ stages:
           ArtifactName: 'macos_$(CMAKE_BUILD_TYPE)'
       - task: PublishBuildArtifacts@1
         inputs:
-          PathtoPublish: build/samples/samples.dylib
+          PathtoPublish: build/samples/libsamples.dylib
           ArtifactName: 'macos_$(CMAKE_BUILD_TYPE)'
     - job: build_linux_natives
       displayName: Linux
@@ -76,7 +76,7 @@ stages:
           ArtifactName: 'linux_$(CMAKE_BUILD_TYPE)'
       - task: PublishBuildArtifacts@1
         inputs:
-          PathtoPublish: build/samples/samples.so
+          PathtoPublish: build/samples/libsamples.so
           ArtifactName: 'linux_$(CMAKE_BUILD_TYPE)'
   - stage: build_java
     jobs:
