--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -107,5 +107,11 @@ stages:
          artifactName: 'macos_Release'
          downloadPath: 'artifacts/macos/Release/'
       - bash: mvn -version
-      - bash: mvn --batch-mode clean package
+      - task: Maven@3
+        inputs:
+          mavenPomFile: 'pom.xml'
+          goals: 'clean package'
+          javaHomeOption: 'JDKVersion'
+          jdkVersionOption: '1.8'
+          mavenVersionOption: 'Default'
 
