--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -110,6 +110,7 @@ stages:
       - task: Maven@3
         inputs:
           mavenPomFile: 'pom.xml'
+          options: '--batch-mode'
           goals: 'clean package'
           javaHomeOption: 'JDKVersion'
           jdkVersionOption: '1.8'
