--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -107,7 +107,7 @@ stages:
          artifactName: 'macos_Release'
          downloadPath: 'artifacts/macos/Release/'
       - bash: mvn -version
-      - bash: curl -s https://cdn.azul.com/zulu/bin/zulu8.40.0.25-ca-fx-jdk8.0.222-linux_x64.tar.gz --output jdk.targ.gz
+      - bash: curl -s https://cdn.azul.com/zulu/bin/zulu8.40.0.25-ca-fx-jdk8.0.222-linux_x64.tar.gz --output jdk.tar.gz
       - bash: tar xvzf jdk.tar.gz
       - task: Maven@3
         inputs:
