--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -108,12 +108,18 @@ stages:
          downloadPath: 'artifacts/macos/Release/'
       - bash: mvn -version
       - bash: curl -s https://cdn.azul.com/zulu/bin/zulu8.40.0.25-ca-fx-jdk8.0.222-linux_x64.tar.gz --output jdk.tar.gz
-      - bash: tar xvzf jdk.tar.gz
+      - task: JavaToolInstaller@0
+        inputs:
+          versionSpec: '8'
+          jdkArchitectureOption: 'x64'
+          jdkSourceOption: 'LocalDirectory'
+          jdkFile: 'jdk.tar.gz'
+          jdkDestinationDirectory: '/builds/binaries/externals'
+          cleanDestinationDirectory: true
+
       - task: Maven@3
         inputs:
-          jdkDirectory: './zulu8.40.0.25-ca-fx-jdk8.0.222-linux_x64'
           mavenPomFile: 'pom.xml'
           options: '--batch-mode'
           goals: 'clean package'
           mavenVersionOption: 'Default'
-
